--- a/app/views/parts/show.html.erb
+++ b/app/views/parts/show.html.erb
@@ -1,24 +1,30 @@
-<div class="container bg-light part-narrowing">
-  <div class="row pt-3 part-narrowing">
-    <div class="col-md-12 part-narrowing">
-      <h2>パーツ詳細</h2>
-      <%= image_tag @part.image, size: "100x100", :alt => "パーツ画像" %>
-      <p>パーツ名：<%= @part.name %></p>
-      <p>参考価格：¥<%= @part.price.to_s(:delimited) %></p>
-      <p>タグ</p>
-      <% @part_tags.each do |part_tag| %>
-        <ul>
-          <li>
-            <%= link_to part_tag_parts_path(part_tag_id: part_tag.id) do %>
-              <%= part_tag.name %>
-            <% end %>
-          </li>
-        </ul>
-      <% end %>
-      <% if user_signed_in? %>
-        <%= form_with(model:[@part, @draft_configuration], local:true) do |f| %>
-          <%= f.submit "PC構成リストに加える", class: "btn btn-success", style: "width: 140px;" %>
+<div class="container bg-light part-show">
+  <div class="row pt-3 part-show">
+    <div class="col-md-12 part-show__title">
+      <h4 class="part-show__title">"<%= @part.name %>" 詳細</h4>
+    </div>
+  </div>
+  <div class="row pt-3 pb-3 part-show">
+    <div class="col-md-5 mr-3 part-show__image">
+      <%= image_tag @part.image, size: "300x200", :alt => "パーツ画像" %>
+    </div>
+    <div class="col-md-5 part-show__content">
+      <div class="part-show__content__name">パーツ名：<%= @part.name %></div>
+      <div class="part-show__content__price">参考価格：¥<%= @part.price.to_s(:delimited) %></div>
+      <div>関連タグ</div>
+      <div class="d-flex flex-wrap part-show__content__tag">
+        <% @part_tags.each do |part_tag| %>
+          <%= link_to part_tag_parts_path(part_tag_id: part_tag.id) do %>
+            <div class="text-secondary pr-2 part-show__content__tag__link">#<%= part_tag.name %></div>
+          <% end %>
         <% end %>
+      </div>
+      <% if user_signed_in? %>
+      <div class="mt-3 part-show__content__actions">
+        <%= form_with(model:[@part, @draft_configuration], local:true) do |f| %>
+          <div class="part-show__content__actions__btn"><%= f.submit "PC構成リストに加える", class: "btn btn-success" %></div>
+        <% end %>
+      </div>
       <% end %>
     </div>
   </div>
