--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container bg-light post-index">
-  <div class="row pt-3 post-index">
-    <div class="col-md-12 post-index">
+  <div class="row pt-2 post-index">
+    <div class="col-md-11 offset-md-1 post-index">
       <h4 class="post-index__title">投稿一覧</h4>
     </div>
   </div>
