--- a/app/views/pc_configurations/index.html.erb
+++ b/app/views/pc_configurations/index.html.erb
@@ -1,11 +1,25 @@
-<h2>PC構成リスト投稿一覧</h2>
-<% @pc_configurations.each do |pc_configuration| %>
-  <div>
-    <%= link_to pc_configuration_path(pc_configuration.id) do %>
-      <%= attachment_image_tag pc_configuration, :image, fallback: "no_image.jpg", size: "180x130" %>
-    <% end %>
-    <p>タイトル：<%= pc_configuration.title %></p>
-    <p>説明：<%= pc_configuration.body %></p>
-    <p>ユーザーネーム：<%= pc_configuration.user.name %></p>
+<div class="container bg-light post-index">
+  <div class="row pt-2 post-index">
+    <div class="col-md-11 offset-md-1 post-index">
+      <h4 class="post-index__title">PC構成リスト投稿一覧</h4>
+    </div>
   </div>
-<% end %>
+  <div class="row pt-2 post-index">
+    <div class="post-index" style="display: flex; flex-wrap: wrap; justify-content: center;">
+      <% @pc_configurations.each do |pc_configuration| %>
+      <%= link_to pc_configuration_path(pc_configuration.id) do %>
+      <div class="post-index__content-box p-3">
+        <div class="post-index__content-box__image"><%= attachment_image_tag pc_configuration, :image, fallback: "no_image.jpg", size: "300x200" %></div>
+        <div class="text-dark post-index__content-box__title"><%= pc_configuration.title.truncate(20) %></div>
+        <div class="small post-index__content-box__user-name">
+          <%= link_to user_path(pc_configuration.user.id) do %>
+            <div class="text-secondary post-index__content-box__user-name__link">ユーザーネーム：<%= pc_configuration.user.name %></div>
+          <% end %>
+        </div>
+        <div class="small text-dark post-index__content-box__created-at">投稿日時：<%= pc_configuration.created_at.to_s(:datetime_jp) %></div>
+      </div>
+      <% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
