--- a/app/views/pc_configurations/new.html.erb
+++ b/app/views/pc_configurations/new.html.erb
@@ -1,157 +1,182 @@
 <% if DraftConfiguration.exists?(user_id: current_user.id) %>
-  <h2>PC構成リスト投稿フォーム</h2>
-  <%= form_with model: @pc_configuration, local:true do |f| %>
-    <h4>タイトル</h4>
-    <%= f.text_field :title %>
-    <h4>画像</h4>
-    <%= f.attachment_field :image %>
-    <h4>説明</h4>
-    <%= f.text_area :body %>
-    <!--<h4>タグ付け</h4>-->
-    <!--<p>タグの間にスペースを入力することで複数のタグを付けることができます。</p>-->
-    <!--%= f.text_field :names %-->
-    <table class="table table-bordered">
-      <thead>
-          <tr class="table table-active">
-              <th class="border border-dark", scope="col", style="width: 30%">パーツ名</th>
-              <th class="border border-dark", scope="col", style="width: 15%">数量</th>
-              <th class="border border-dark", scope="col", style="width: 15%">参考価格</th>
-          </tr>
-      </thead>
-      <tbody>
-        <% if @cpu_existing_configuration.nil? %>
-        <% else %>
-        <tr>
-          <td class="border border-dark">
-            <%= @cpu_existing_configuration.part.name %>
-          </td>
-          <td class="border border-dark">
-            <%= @cpu_existing_configuration.quantity %>
-          </td>
-          <td class="border border-dark">
-            ¥<%= @cpu_existing_configuration.part.price.to_s(:delimited) %>
-          </td>
-        </tr>
-        <% end %>
-        <% if @memory_existing_configuration.nil? %>
-        <% else %>
-        <tr>
-          <td class="border border-dark">
-            <%= @memory_existing_configuration.part.name %>
-          </td>
-          <td class="border border-dark">
-            <%= @memory_existing_configuration.quantity %>
-          </td>
-          <td class="border border-dark">
-            ¥<%= @memory_existing_configuration.part.price.to_s(:delimited) %>
-          </td>
-        </tr>
-        <% end %>
-        <% if @gpu_existing_configuration.nil? %>
-        <% else %>
-        <tr>
-          <td class="border border-dark">
-            <%= @gpu_existing_configuration.part.name %>
-          </td>
-          <td class="border border-dark">
-            <%= @gpu_existing_configuration.quantity %>
-          </td>
-          <td class="border border-dark">
-            ¥<%= @gpu_existing_configuration.part.price.to_s(:delimited) %>
-          </td>
-        </tr>
-        <% end %>
-        <% if @mb_existing_configuration.nil? %>
-        <% else %>
-        <tr>
-          <td class="border border-dark">
-            <%= @mb_existing_configuration.part.name %>
-          </td>
-          <td class="border border-dark">
-            <%= @mb_existing_configuration.quantity %>
-          </td>
-          <td class="border border-dark">
-            ¥<%= @mb_existing_configuration.part.price.to_s(:delimited) %>
-          </td>
-        </tr>
-        <% end %>
-        <% if @cooler_existing_configuration.nil? %>
-        <% else %>
-        <tr>
-          <td class="border border-dark">
-            <%= @cooler_existing_configuration.part.name %>
-          </td>
-          <td class="border border-dark">
-            <%= @cooler_existing_configuration.quantity %>
-          </td>
-          <td class="border border-dark">
-            ¥<%= @cooler_existing_configuration.part.price.to_s(:delimited) %>
-          </td>
-        </tr>
-        <% end %>
-        <% if @case_existing_configuration.nil? %>
-        <% else %>
-        <tr>
-          <td class="border border-dark">
-            <%= @case_existing_configuration.part.name %>
-          </td>
-          <td class="border border-dark">
-            <%= @case_existing_configuration.quantity %>
-          </td>
-          <td class="border border-dark">
-            ¥<%= @case_existing_configuration.part.price.to_s(:delimited) %>
-          </td>
-        </tr>
-        <% end %>
-        <% if @power_existing_configuration.nil? %>
-        <% else %>
-        <tr>
-          <td class="border border-dark">
-            <%= @power_existing_configuration.part.name %>
-          </td>
-          <td class="border border-dark">
-            <%= @power_existing_configuration.quantity %>
-          </td>
-          <td class="border border-dark">
-            ¥<%= @power_existing_configuration.part.price.to_s(:delimited) %>
-          </td>
-        </tr>
-        <% end %>
-        <% if @ssd_existing_configuration.nil? %>
-        <% else %>
-        <tr>
-          <td class="border border-dark">
-            <%= @ssd_existing_configuration.part.name %>
-          </td>
-          <td class="border border-dark">
-            <%= @ssd_existing_configuration.quantity %>
-          </td>
-          <td class="border border-dark">
-            ¥<%= @ssd_existing_configuration.part.price.to_s(:delimited) %>
-          </td>
-        </tr>
-        <% end %>
-        <% if @hdd_existing_configuration.nil? %>
-        <% else %>
-        <tr>
-          <td class="border border-dark">
-            <%= @hdd_existing_configuration.part.name %>
-          </td>
-          <td class="border border-dark">
-            <%= @hdd_existing_configuration.quantity %>
-          </td>
-          <td class="border border-dark">
-            ¥<%= @hdd_existing_configuration.part.price.to_s(:delimited) %>
-          </td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
-  <div>
-    <span><%= link_to "PC構成リストの編集画面へ戻る", draft_configurations_path, class: "btn btn-lg btn-primary col-3 offset-2" %></span>
-    <span><%= f.submit "PC構成リストを投稿する", class: "btn btn-lg btn-success col-3 offset-2" %></span>
+<div class="container bg-light post-index">
+  <div class="row pt-3 new-post">
+    <div class="col-md-10 offset-md-1 new-post__title">
+      <h4>PC構成リスト投稿フォーム</h4>
+    </div>
   </div>
+  <%= form_with model: @pc_configuration, local:true do |f| %>
+  <div class="row pt-3 post-edit__form">
+    <div class="col-md-3 offset-md-2 post-edit__form__label">タイトル</div>
+    <div class="col-md-5 offset-md-1 post-edit__form__field"><%= f.text_field :title, size: 30 %></div>
+  </div>
+  <div class="row pt-3 post-edit__form">
+    <div class="col-md-3 offset-md-2 post-edit__form__label">画像</div>
+    <div class="col-md-5 offset-md-1 post-edit__form__field"><%= f.attachment_field :image %></div>
+  </div>
+  <div class="row pt-3 post-edit__form">
+    <div class="col-md-3 offset-md-2 post-edit__form__label">内容説明</div>
+    <div class="col-md-5 offset-md-1 post-edit__form__field"><%= f.text_area :body, rows:"4", cols:"30" %></div>
+  </div>
+
+  <% if @cpu_existing_configuration.nil? %>
+  <% else %>
+    <div class="row pt-2 pb-2 border post-index">
+      <div class="col-md-9 d-flex align-items-center post-index">
+        <%= image_tag @cpu_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
+        <%= @cpu_existing_configuration.part.name %>
+      </div>
+      <div class="col-md-2 d-flex align-items-center post-index">
+        ¥<%= @cpu_existing_configuration.part.price.to_s(:delimited) %>
+      </div>
+      <div class="col-md-1 d-flex align-items-center post-index">
+        <%= @cpu_existing_configuration.quantity %>個
+      </div>
+    </div>
   <% end %>
+  <% if @memory_existing_configuration.nil? %>
+  <% else %>
+    <div class="row pt-2 pb-2 border post-index">
+      <div class="col-md-9 d-flex align-items-center post-index">
+        <%= image_tag @memory_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
+        <%= @memory_existing_configuration.part.name %>
+      </div>
+      <div class="col-md-2 d-flex align-items-center post-index">
+        ¥<%= @memory_existing_configuration.part.price.to_s(:delimited) %>
+      </div>
+      <div class="col-md-1 d-flex align-items-center post-index">
+        <%= @memory_existing_configuration.quantity %>個
+      </div>
+    </div>
+  <% end %>
+  <% if @gpu_existing_configuration.nil? %>
+  <% else %>
+    <div class="row pt-2 pb-2 border post-index">
+      <div class="col-md-9 d-flex align-items-center post-index">
+        <%= image_tag @gpu_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
+        <%= @gpu_existing_configuration.part.name %>
+      </div>
+      <div class="col-md-2 d-flex align-items-center post-index">
+        ¥<%= @gpu_existing_configuration.part.price.to_s(:delimited) %>
+      </div>
+      <div class="col-md-1 d-flex align-items-center post-index">
+        <%= @gpu_existing_configuration.quantity %>個
+      </div>
+    </div>
+  <% end %>
+  <% if @mb_existing_configuration.nil? %>
+  <% else %>
+    <div class="row pt-2 pb-2 border post-index">
+      <div class="col-md-9 d-flex align-items-center post-index">
+        <%= image_tag @mb_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
+        <%= @mb_existing_configuration.part.name %>
+      </div>
+      <div class="col-md-2 d-flex align-items-center post-index">
+        ¥<%= @mb_existing_configuration.part.price.to_s(:delimited) %>
+      </div>
+      <div class="col-md-1 d-flex align-items-center post-index">
+        <%= @mb_existing_configuration.quantity %>個
+      </div>
+    </div>
+  <% end %>
+  <% if @cooler_existing_configuration.nil? %>
+  <% else %>
+    <div class="row pt-2 pb-2 border post-index">
+      <div class="col-md-9 d-flex align-items-center post-index">
+        <%= image_tag @cooler_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
+        <%= @cooler_existing_configuration.part.name %>
+      </div>
+      <div class="col-md-2 d-flex align-items-center post-index">
+        ¥<%= @cooler_existing_configuration.part.price.to_s(:delimited) %>
+      </div>
+      <div class="col-md-1 d-flex align-items-center post-index">
+        <%= @cooler_existing_configuration.quantity %>個
+      </div>
+    </div>
+  <% end %>
+  <% if @case_existing_configuration.nil? %>
+  <% else %>
+    <div class="row pt-2 pb-2 border post-index">
+      <div class="col-md-9 d-flex align-items-center post-index">
+        <%= image_tag @case_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
+        <%= @case_existing_configuration.part.name %>
+      </div>
+      <div class="col-md-2 d-flex align-items-center post-index">
+        ¥<%= @case_existing_configuration.part.price.to_s(:delimited) %>
+      </div>
+      <div class="col-md-1 d-flex align-items-center post-index">
+        <%= @case_existing_configuration.quantity %>個
+      </div>
+    </div>
+  <% end %>
+  <% if @power_existing_configuration.nil? %>
+  <% else %>
+    <div class="row pt-2 pb-2 border post-index">
+      <div class="col-md-9 d-flex align-items-center post-index">
+        <%= image_tag @power_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
+        <%= @power_existing_configuration.part.name %>
+      </div>
+      <div class="col-md-2 d-flex align-items-center post-index">
+        ¥<%= @power_existing_configuration.part.price.to_s(:delimited) %>
+      </div>
+      <div class="col-md-1 d-flex align-items-center post-index">
+        <%= @power_existing_configuration.quantity %>個
+      </div>
+    </div>
+  <% end %>
+  <% if @ssd_existing_configuration.nil? %>
+  <% else %>
+    <div class="row pt-2 pb-2 border post-index">
+      <div class="col-md-9 d-flex align-items-center post-index">
+        <%= image_tag @ssd_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
+        <%= @ssd_existing_configuration.part.name %>
+      </div>
+      <div class="col-md-2 d-flex align-items-center post-index">
+        ¥<%= @ssd_existing_configuration.part.price.to_s(:delimited) %>
+      </div>
+      <div class="col-md-1 d-flex align-items-center post-index">
+        <%= @ssd_existing_configuration.quantity %>個
+      </div>
+    </div>
+  <% end %>
+  <% if @hdd_existing_configuration.nil? %>
+  <% else %>
+    <div class="row pt-2 pb-2 border post-index">
+      <div class="col-md-9 d-flex align-items-center post-index">
+        <%= image_tag @hdd_existing_configuration.part.image, size: "40x40", :alt => "パーツ画像" %>
+        <%= @hdd_existing_configuration.part.name %>
+      </div>
+      <div class="col-md-2 d-flex align-items-center post-index">
+        ¥<%= @hdd_existing_configuration.part.price.to_s(:delimited) %>
+      </div>
+      <div class="col-md-1 d-flex align-items-center post-index">
+        <%= @hdd_existing_configuration.quantity %>個
+      </div>
+    </div>
+  <% end %>
+  <div class="row pt-3 post-index">
+    <div class="col-md-12 d-flex justify-content-center post-index">
+      <div>PC構成リスト合計金額　¥<%= @sum_price.to_s(:delimited) %></div>
+    </div>
+  </div>
+
+
+  <div class="row pt-3 post-index">
+    <div class="col-md-6 mb-2 d-flex justify-content-center post-index">
+      <div><%= link_to "PC構成リストの編集画面へ戻る", draft_configurations_path, class: "btn btn-primary" %></div>
+    </div>
+    <div class="col-md-6 mb-2 d-flex justify-content-center post-index">
+      <div><%= f.submit "PC構成リストを投稿する", class: "btn btn-success" %></div>
+    </div>
+  </div>
+  <% end %> <!--form_withのエンド-->
+</div>
 <% else %>
-<h3>PC構成リストを作りましょう</h3>
+<div class="container bg-light post-index">
+  <div class="row pt-3 new-post">
+    <div class="col-md-10 offset-md-1 new-post__title">
+      <h4>PC構成リストを作りましょう</h4>
+    </div>
+  </div>
+</div>
 <% end %>
